made chane on index file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RushiGosaviSite</title>
 </head>
 <body>
-    Hi! I am Rushi!  
+    <h1>Hi! I am Rushi!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, in quam molestiae labore nobis laboriosam rem, minus ipsam neque at ratione ex nisi. Provident, tempore!</p>  
 </body>
 </html>
