update details of project

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Hi! I am Rushi!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, in quam molestiae labore nobis laboriosam rem, minus ipsam neque at ratione ex nisi. Provident, tempore!</p>  
+
+    I have worked on few CLI apps. I'll showcase it here tomorrow.
 </body>
 </html>
