--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, in quam molestiae labore nobis laboriosam rem, minus ipsam neque at ratione ex nisi. Provident, tempore!</p>  
 
     I have worked on few CLI apps. I'll showcase it here tomorrow.
+
+    <h2>Details about my self</h2>
+    My name is Rushikesh And I am quiet good in swimming
 </body>
 </html>
